[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pyright]
pythonVersion = "3.8"
exclude = [
    "venv",
    "**/node_modules",
    "**/__pycache__",
    ".git"
]
include = ["rebelai", "scripts"]
venvPath = "venv"
typeCheckingMode = "strict"
useLibraryCodeForTypes = true
reportMissingTypeStubs = true

[tool.mypy]
exclude = [
    "^venv/.*",
    "^node_modules/.*",
    "^__pycache__/.*",
]
